Fix rare CCE in the interface selector UI of the new-java-class wizard
The code replaced a typed ListModel with a dummy model containing a
single String which can cause a CCE in the interface selector filter.

The dummy model isn't really needed since the goto component does
handle the "search in progress" state already, so I removed the default
value.

Fixed more rawtype compiler warnings to avoid similar issues in future.